# roblox_booster

./: .gitignore  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  DEVELOPER_NOTES.md  EDITION_2024.md  Features.md  ICON_CUSTOMIZATION.md  Install.md  LICENSE  Makefile  PERFORMANCE.md  QUICKSTART.md  README.md  REPORTING_FALSE_POSITIVE.md  SECURITY.md  SUMMARY.md  build.rs  clean.bat  config.toml  justfile  rust-toolchain.toml  setup.sh  setup_and_build.sh  sign_exe.ps1
.cargo/: config.toml
src/: booster.rs  config.rs  main.rs  ui.rs
