[package]
name = "roblox_booster"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Made by AI"]
description = "A system performance booster for Roblox"
license = "MIT"
repository = "https://github.com/duyvietnam20121/roblox_booster"
keywords = ["roblox", "performance", "booster", "gaming", "optimizer"]
categories = ["games", "gui"]

[dependencies]
# GUI framework - latest stable with Edition 2024 support
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.29"

# System information
sysinfo = "0.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[profile.release.package."*"]
opt-level = 3
strip = true

[[bin]]
name = "roblox_booster"
path = "src/main.rs"