[package]
name = "roblox_booster"
version = "0.1.0"
edition = "2024"
authors = ["Made by AI"]
rust-version = "1.85"

[dependencies]
eframe = "0.30"
egui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.32"
anyhow = "1.0"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = "z"     # Tối ưu size
lto = true          # Link-time optimization
codegen-units = 1   # Tối ưu hóa tốt hơn
strip = true        # Loại bỏ symbols
panic = "abort"     # Giảm size binary

[profile.dev]
opt-level = 1       # Dev nhanh hơn

[build-dependencies]
winres = "0.1"